RESOLVED FIXED77009
[Qt] The Qt MiniBrowser crashes when given multiple URL's
https://bugs.webkit.org/show_bug.cgi?id=77009
Summary [Qt] The Qt MiniBrowser crashes when given multiple URL's
Alexander Færøy
Reported 2012-01-25 07:20:38 PST
SSIA. Patch coming up.
Attachments
Patch (2.21 KB, patch)
2012-01-25 07:24 PST, Alexander Færøy
no flags
Patch (2.40 KB, patch)
2012-01-26 06:19 PST, Alexander Færøy
no flags
Alexander Færøy
Comment 1 2012-01-25 07:24:48 PST
WebKit Review Bot
Comment 2 2012-01-25 08:16:18 PST
Comment on attachment 123933 [details] Patch Attachment 123933 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11343566 New failing tests: media/audio-garbage-collect.html
Adam Barth
Comment 3 2012-01-25 11:06:31 PST
> media/audio-garbage-collect.html I'm sorry for the noise. I tried to mark this test as flaky, but I seem not to have succeeded. I'll try again.
Simon Hausmann
Comment 4 2012-01-26 01:05:22 PST
Comment on attachment 123933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=123933&action=review > Tools/ChangeLog:9 > + [Qt] The Qt MiniBrowser crashes when given multiple URL's > + https://bugs.webkit.org/show_bug.cgi?id=77009 > + > + Reviewed by NOBODY (OOPS!). > + > + * MiniBrowser/qt/BrowserWindow.cpp: > + (BrowserWindow::BrowserWindow): A word or two about _why_ it crashes would be nice :)
Alexander Færøy
Comment 5 2012-01-26 06:19:20 PST
WebKit Review Bot
Comment 6 2012-01-26 07:28:44 PST
Comment on attachment 124113 [details] Patch Clearing flags on attachment: 124113 Committed r106003: <http://trac.webkit.org/changeset/106003>
WebKit Review Bot
Comment 7 2012-01-26 07:28:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.