[Qt] The Qt MiniBrowser crashes when given multiple URL's https://bugs.webkit.org/show_bug.cgi?id=77009

Patch by Alexander Færøy <alexander.faeroy@nokia.com> on 2012-01-26
Reviewed by Simon Hausmann.

This patch fixes a crash in BrowserWindow::newWindow() where a
BrowserWindow-object is constructed with a 0 pointer as the
WindowOptions parameter which leads to a crash.

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::BrowserWindow):
(BrowserWindow::newWindow):
* MiniBrowser/qt/BrowserWindow.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@106003 bbb929c8-8fbe-4397-9dbb-9b2b20218538