third_party/WebKit/Tools/MiniBrowser/qt/BrowserWindow.h
@@ -40,7 +40,7 @@ class BrowserWindow : public QQuickView {
     Q_OBJECT
 
 public:
-    BrowserWindow(WindowOptions* = 0);
+    BrowserWindow(WindowOptions*);
     ~BrowserWindow();
     void load(const QString& url);
     void reload();
@@ -57,6 +57,7 @@ protected slots:
 
 private:
     void updateUserAgentList();
+    WindowOptions* m_windowOptions;
     QStringList m_userAgentList;
 };
 
